# TivaArm

./: .gitignore  README.md
boards/EK-LM4F120LX/Common/: readme.txt  toolchain-gcc-arm-none-eabi.cmake
boards/EK-LM4F120LX/Common/driverlib/: CMakeLists.txt  build.sh
boards/EK-LM4F120LX/Common/utils/: CMakeLists.txt  build.sh
boards/EK-LM4F120LX/blinky/: CMakeLists.txt  blinky.c  build.sh  startup_gcc.c
boards/EK-LM4F120LX/qs-rgb/: CMakeLists.txt  build.sh  debug.sh  init.gdb  qs-rgb.c  rgb_commands.c
